@@ -25,16 +25,20 @@
  * Addison-Wesley
  * Page 108
  *
- * This implementation copyright (C) 2001 Carlo Perassi.
+ * This implementation  copyright (C) 2001 Carlo Perassi
+ * and (C) 2003 Heiko Bauke.
  */
 
 #include <config.h>
 #include <stdlib.h>
 #include <gsl/gsl_rng.h>
 
-#define AA1 271828183UL
-#define AA2 314159269UL
-#define MM 0x7fffffffUL		/* 2 ^ 31 - 1 */
+#include "schrage.c"
+
+#define AA1      271828183UL
+#define AA2     1833324378UL	/* = -314159269 mod (2 ^ 31 -1) */
+#define MM      0x7fffffffUL	/* 2 ^ 31 - 1 */
+#define CEIL_SQRT_MM 46341UL	/* sqrt(2 ^ 31 - 1) */
 
 static inline unsigned long int ran_get (void *vstate);
 static double ran_get_double (void *vstate);
@@ -52,8 +56,13 @@ ran_get (void *vstate)
 {
   ran_state_t *state = (ran_state_t *) vstate;
 
-  unsigned long int xtmp = state->x1;
-  state->x1 = (AA1 * state->x1 - AA2 * state->x0) & MM;
+  const unsigned long int xtmp = state->x1;
+  state->x1 = schrage_mult (AA1, state->x1, MM, CEIL_SQRT_MM)
+    + schrage_mult (AA2, state->x0, MM, CEIL_SQRT_MM);
+
+  if (state->x1 >= MM)
+    state->x1 -= MM;
+
   state->x0 = xtmp;
 
   return state->x1;
@@ -64,7 +73,7 @@ ran_get_double (void *vstate)
 {
   ran_state_t *state = (ran_state_t *) vstate;
 
-  return ran_get (state) / 2147483648.0;
+  return ran_get (state) / 2147483647.0;
 }
 
 static void
@@ -72,18 +81,18 @@ ran_set (void *vstate, unsigned long int s)
 {
   ran_state_t *state = (ran_state_t *) vstate;
 
-  if (s == 0)
+  if ((s % MM) == 0)
     s = 1;			/* default seed is 1 */
 
-  state->x0 = s & MM;
-  state->x1 = s & MM;
+  state->x0 = s % MM;
+  state->x1 = s % MM;
 
   return;
 }
 
 static const gsl_rng_type ran_type = {
   "knuthran2",			/* name */
-  MM,				/* RAND_MAX */
+  MM - 1L,			/* RAND_MAX */
   0,				/* RAND_MIN */
   sizeof (ran_state_t),
   &ran_set,
