@@ -1,5 +1,9 @@
 * What is new in gsl-1.3+:
 
+** Fixed bugs in the random number generators gsl_rng_fishman18,
+gsl_rng_fishman2x, and gsl_rng_knuthran2 which caused them to return
+incorrect results.
+
 ** gsl_linalg_householder_hv now uses BLAS routines internally
 
 ** Added faster binomial random variates using the TPE rejection
